# fortress-commander

./: .clang-format  .gitignore  ;  CMakeLists.txt  README.md  checker.py  makefile  todo.py
cmake/: clang-format.cmake  freetype.cmake  glad_glfw.cmake  gtest.cmake  sfml.cmake  utils.cmake
docs/: idea-todo.md  idea.md  milestone-4-1.md  opengl-how-to-draw.md  opengl.md  resource-gen.md  todo,md  todo.md
glad/include/glad/: glad.h
glad/src/: glad.c
lib/: libglfw.so.3.2
shaders/: fow_clouds.fs  fow_clouds.vs  fow_mask.fs  fow_mask.vs  instanced.vs  instanced_array.fs  instanced_array.vs  light_mask.fs  light_mask.vs  simple_texture.vs  text.fs  texture.fs  texture.vs  triangle.vs  unicolor_triangle.fs  unicolor_triangle.vs  view_triangle.fs  view_triangle.vs
src/: Components.cpp  Components.h  Config.h  Enemy.cpp  Enemy.h  EnemySpawner.h  EventSubscribers.h  Events.h  Game.cpp  Game.h  GameState.cpp  GameState.h  GlmHashes.h  Graphics.h  Grid.h  ParticleSystem.h  Particles.cpp  Particles.h  Path.cpp  Path.h  Region.cpp  Region.h  RegionGenerator.h  Shader.h  Structure.cpp  Structure.h  Systems.cpp  Systems.h  Test.cpp  Tile.cpp  Tile.h  Unit.cpp  Unit.h  VecMath.h  World.cpp  World.h  cmake  main.cpp
src/ECS/: Component.h  Entity.h  Event.h  Manager.cpp  Manager.h  System.cpp  System.h
src/Graphics/: GL.h  Instanced.cpp  Instanced.h  Light.h  RenderWindow.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  TextRenderer.h  Texture.h  TextureBatch.h  TexturedRectangle.h  View.h
src/Systems/: BattleSystem.h  HealthBarSystem.h  LightRenderingSystem.h  MoveSystem.cpp  MoveSystem.h  ResourceSystem.h  UnitCollisionSystem.h  UnitCommandSystem.h  UnitSelectionSystem.h
textures/: textures.json  textures.tps
